what we do and work section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div>Sign in</div>
         <div><button id="sidebar-btn">Sign Up</button></div>
     </div>
-    <!-- nav end  -->
 
+    <!-- header start  -->
     <div id="header">
         <img src="./public/header.png" alt="">
         <div>
@@ -45,6 +45,85 @@
             <p>Webflow Agency</p>
         </div>
     </div>
+
+    <!-- what we do -->
+    <section class="what-we-do ">
+        <div class="container">
+            <div class="title">
+                <h3>what we do</h3>
+            </div>
+            <div class="wrapper">
+                <div class="card card-1">
+                    <div class="icon">
+                        <img src="./public/what1.png" alt="">
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>From concept to launch, we create stunning, user-centric websites that elevate your brand and
+                        engage your audience.</p>
+                </div>
+                <div class="card card-2">
+                    <div class="icon">
+                        <img src="./public/what2.png" alt="">
+                    </div>
+                    <h4>UI/UX Design</h4>
+                    <p>From concept to launch, we create stunning, user-centric websites that elevate your brand and
+                        engage your audience.</p>
+                </div>
+                <div class="card card-3">
+                    <div class="icon">
+                        <img src="./public/what3.png" alt="">
+                    </div>
+                    <h4>Responsive Design</h4>
+                    <p>From concept to launch, we create stunning, user-centric websites that elevate your brand and
+                        engage your audience.</p>
+                </div>
+                <div class="card card-4">
+                    <div class="conatent">
+                        <div class="icon">
+                            <img src="./public/what4.png" alt="">
+                        </div>
+                        <h4>E-commerce Solutions:</h4>
+                        <p>From concept to launch, we create stunning, user-centric websites that elevate your brand and
+                            engage your audience.</p>
+                    </div>
+                    <div class="img">
+                        <img src="./public/what5.png" alt="">
+                    </div>
+                </div>
+                <div class="card card-5">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="./public/what6.png" alt="">
+                        </div>
+                        <h4>Webflow</h4>
+                        <p>From concept to launch, we create stunning, user-centric websites that elevate your brand and
+                            engage your audience.</p>
+                    </div>
+                    <div class="box">
+                        <img src="./public/what7.png" alt="">
+                    </div>
+                </div>
+                <div class="card card-6">
+                    <div class="icon">
+                        <img src="./public/what8.png" alt="">
+                    </div>
+                    <h4>Custom Development</h4>
+                    <p>From concept to launch, we create stunning, user-centric websites that elevate your brand and
+                        engage your audience.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- work -->
+    <div id="work">
+        <div style="margin-top: 100px;">Check our Work</div>
+        <div>Take a look at some of our recent projects to see how we've helped businesses like yours succeed online.</div>
+        <div id="work2Img">
+            <img src="./public/work2.png" alt="work2">
+        </div>
+    </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
