--- a/index.html
+++ b/index.html
@@ -122,7 +122,18 @@
         <div id="work2Img">
             <img src="./public/work2.png" alt="work2">
         </div>
+        <!-- rating -->
+    <div id="rating">
+        <div><img src="./public/rating-pics.png" alt="profile-pic"></div>
+        <div>
+            <div>5.0 <span>Based on</span> 145 <span>Reviews</span></div>
+            <div><img src="./public/rating-star.png" alt=""></div>
+        </div>
     </div>
+    <!-- rating end -->
+    </div>
+
+    
 
     <script src="./index.js"></script>
 </body>
