pricing section added

--- a/index.html
+++ b/index.html
@@ -133,7 +133,49 @@
     <!-- rating end -->
     </div>
 
-    
+    <!-- pricing -->
+    <section class="pricing">
+        <div class="pricing-container">
+        <div class="pricing-content-left">
+            <div>
+                <div class="pricing-title">
+                    <h3>Pricing</h3>
+                </div>
+                <p class="pricing-para">Take a look at some of our recent projects to see how we've helped businesses like yours succeed
+                    online.</p>
+            </div>
+            <div class="pricing-content-2">
+                <h4>Let’s Schedule a Meeting</h4>
+                <button>Schedule Meeting</button>
+            </div>
+        </div>
+        <div class="pricing-content-right">
+            <h5>Unlimited Services</h5>
+            <p class="pricing-para">Take a look at some of our recent projects to see how we've helped businesses like yours succeed online.
+            </p>
+            <div class="pricing-services">
+                <ul>
+                    <li><img src="/public/Frame-tick.png" alt=""><span>Unlimited requests</span></li>
+                    <li><img src="/public/Frame-tick.png" alt=""><span>Unlimited requests</span></li>
+                    <li><img src="/public/Frame-tick.png" alt=""><span>Unlimited requests</span></li>
+                </ul>
+                <ul>
+                    <li><img src="/public/Frame-tick.png" alt=""><span>Unlimited requests</span></li>
+                    <li><img src="/public/Frame-tick.png" alt=""><span>Unlimited requests</span></li>
+                    <li><img src="/public/Frame-tick.png" alt="sdfvas"><span>Unlimited requests</span></li>
+                </ul>
+            </div>
+            <div class="price-content">
+                <div class="price">
+                <h2>$3,250<span>/mo</span></h2>
+            </div>
+            <div class="arrow-img">
+                <img src="/public/Frame-arrow.png" alt="">
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
 
     <script src="./index.js"></script>
 </body>
