contact section added

--- a/index.html
+++ b/index.html
@@ -177,6 +177,24 @@
         </div>
     </section>
 
+    <!-- contact -->
+    <section class="contact">
+        <div><img src="./public/contact2.png" alt=""></div>
+        <div class="contact-form">
+            <div>Let’s Get in Touch</div>
+            <form>
+                <label>email</label>
+                <input type="email" placeholder="example@email.com">
+                <label>name</label>
+                <input type="text" placeholder="full name">
+                <label>message</label>
+                <textarea placeholder="write your message"></textarea>
+                <button>Get it touch</button>
+            </form>
+        </div>
+        <div><img src="./public/contact2.png" alt=""></div>
+    </section>
+
     <script src="./index.js"></script>
 </body>
 </html>
