footer section added

--- a/index.html
+++ b/index.html
@@ -195,6 +195,36 @@
         <div><img src="./public/contact2.png" alt=""></div>
     </section>
 
+    <section class="footer">
+        <img src="./public/footer.png" alt="">
+
+        <div id="footer-box">
+            <div>
+                <img src="./public/Logo.png" alt="">
+                <p id="footer-box1-para1">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                <div id="footer-box2">
+                    <p><img src="./public/heart.png" alt="heart"></p>
+                    <p>Made with love powered by inkyy.com.</p>
+                </div>
+            </div>
+
+            <div>
+                <div id="nav-menu-options-footer">
+                    <div>Home</div>
+                    <div>About</div>
+                    <div>How it Works</div>
+                    <div>Services</div>
+                </div>
+                <div id="footer-social-links">
+                    <p><img src="./public/website.png" alt=""></p>
+                    <p><img src="./public/ticktok.png" alt=""></p>
+                    <p><img src="./public/linkedin.png" alt=""></p>
+                    <p><img src="./public/insta.png" alt=""></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./index.js"></script>
 </body>
 </html>
