--- a/index.html
+++ b/index.html
@@ -177,6 +177,137 @@
         </div>
     </section>
 
+    <!-- faq -->
+    <div class="faq">
+        <div class="faq-container">
+            <div class="left-faq">
+                <div class="faq-title">
+                    <h2>Frequently Asked Questions</h2>
+                </div>
+            </div>
+            <div class="right-faq">
+                <div class="accordian">
+                    <div class="faq-ques">
+                        <div class="ques">
+                         <h5>   How can I contact Inkyy Team?</h5>
+                        </div>
+                        <div class="faq-icon">
+                            <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 5V12M12 12V19M12 12H5M12 12H19" stroke="#252432" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <svg class="minus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 12H12H19" stroke="#252432" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="faq-ans">
+                        <p>You can reach us through our contact form on our website or by emailing us at
+                            <strong>hello@inkyy.com</strong> We typically respond within 24 hours.</p>
+                    </div>
+                </div>
+                <div class="accordian">
+                    <div class="faq-ques">
+                        <div class="ques">
+                         <h5>What services do you offer?</h5>
+                        </div>
+                        <div class="faq-icon">
+                            <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 5V12M12 12V19M12 12H5M12 12H19" stroke="#252432" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <svg class="minus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 12H12H19" stroke="#252432" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="faq-ans">
+                        <p>You can reach us through our contact form on our website or by emailing us at
+                            <strong>hello@inkyy.com</strong> We typically respond within 24 hours.</p>
+                    </div>
+                </div>
+                <div class="accordian">
+                    <div class="faq-ques">
+                        <div class="ques">
+                         <h5>Do you provide website maintenance services?</h5>
+                        </div>
+                        <div class="faq-icon">
+                            <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 5V12M12 12V19M12 12H5M12 12H19" stroke="#252432" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <svg class="minus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 12H12H19" stroke="#252432" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="faq-ans">
+                        <p>You can reach us through our contact form on our website or by emailing us at
+                            <strong>hello@inkyy.com</strong> We typically respond within 24 hours.</p>
+                    </div>
+                </div>
+                <div class="accordian">
+                    <div class="faq-ques">
+                        <div class="ques">
+                         <h5> How long does it take to design and develop a website?</h5>
+                        </div>
+                        <div class="faq-icon">
+                            <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 5V12M12 12V19M12 12H5M12 12H19" stroke="#252432" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <svg class="minus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 12H12H19" stroke="#252432" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="faq-ans">
+                        <p>You can reach us through our contact form on our website or by emailing us at
+                            <strong>hello@inkyy.com</strong> We typically respond within 24 hours.</p>
+                    </div>
+                </div>
+                <div class="accordian">
+                    <div class="faq-ques">
+                        <div class="ques">
+                         <h5>Do you require a deposit for projects?</h5>
+                        </div>
+                        <div class="faq-icon">
+                            <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 5V12M12 12V19M12 12H5M12 12H19" stroke="#252432" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <svg class="minus" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 12H12H19" stroke="#252432" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="faq-ans">
+                        <p>You can reach us through our contact form on our website or by emailing us at
+                            <strong>hello@inkyy.com</strong> We typically respond within 24 hours.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="faq-bg">
+            <img src="public/faq.png" alt="">
+        </div>
+    </div>
+
     <!-- contact -->
     <section class="contact">
         <div><img src="./public/contact2.png" alt=""></div>
@@ -195,6 +326,7 @@
         <div><img src="./public/contact2.png" alt=""></div>
     </section>
 
+    <!-- footer -->
     <section class="footer">
         <img src="./public/footer.png" alt="">
 
@@ -226,5 +358,18 @@
     </section>
 
     <script src="./index.js"></script>
+    <script>
+        const accordians  = document.querySelectorAll('.accordian');
+
+        accordians.forEach(accordian =>{
+            const icon = accordian.querySelector('.faq-icon');
+            const answer = accordian.querySelector('.faq-ans');
+
+            accordian.addEventListener('click',() => {
+                icon.classList.toggle('active');
+                answer.classList.toggle('active');
+            })
+        })
+    </script>
 </body>
 </html>
